@@ -9,11 +9,10 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.UnsupportedEncodingException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
@@ -25,8 +24,48 @@ public class ApiService {
     @Value("${public.api.key}")
     private String SERVICE_KEY;
 
-    // 자전거 사고다발지역
-    public String buildApi() throws UnsupportedEncodingException {
+    // totalCount를 얻기 위한 API URL 생성
+    private String buildApiForTotalCount() {
+        StringBuilder urlBuilder = new StringBuilder(BASE_URL);
+
+        // 기본 파라미터 설정
+        urlBuilder.append("?ServiceKey=").append(SERVICE_KEY);
+        urlBuilder.append("&searchYearCd=").append(URLEncoder.encode("2022", StandardCharsets.UTF_8));
+        urlBuilder.append("&siDo=");
+        urlBuilder.append("&guGun=");
+        urlBuilder.append("&type=").append(URLEncoder.encode("json", StandardCharsets.UTF_8));
+        urlBuilder.append("&numOfRows=1");  // totalCount 확인을 위해 numOfRows를 1로 설정
+        urlBuilder.append("&pageNo=1");
+
+        return urlBuilder.toString();
+    }
+
+    // totalCount를 얻기 위한 API 호출 메소드
+    public int fetchTotalCount() throws IOException {
+        String urlStr = buildApiForTotalCount();
+        URL url = new URL(urlStr);
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+        connection.setRequestMethod("GET");
+        connection.setRequestProperty("Content-Type", "application/json");
+
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), StandardCharsets.UTF_8))) {
+            StringBuilder response = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                response.append(line);
+            }
+            JSONObject jsonResponse = new JSONObject(response.toString());
+            int totalCount = jsonResponse.getInt("totalCount");
+            System.out.println("Total Count: " + totalCount);
+            return totalCount;
+        } finally {
+            connection.disconnect();
+        }
+    }
+
+
+    // 자전거 사고다발지역 데이터 API URL
+    public String buildApi(int numOfRows, int pageNo) throws UnsupportedEncodingException {
         StringBuilder urlBuilder = new StringBuilder(BASE_URL);
 
         urlBuilder.append("?ServiceKey=").append(SERVICE_KEY);
@@ -34,52 +73,63 @@ public class ApiService {
         urlBuilder.append("&siDo=");  // 공백시 전체 추출
         urlBuilder.append("&guGun="); // 공백시 전체 추출
         urlBuilder.append("&type=").append(URLEncoder.encode("json", StandardCharsets.UTF_8)); // 데이터 형식 (json)
-        urlBuilder.append("&numOfRows=").append(URLEncoder.encode("10", StandardCharsets.UTF_8)); // 한페이지당 데이터 수
-        urlBuilder.append("&pageNo=").append(URLEncoder.encode("1", StandardCharsets.UTF_8)); // page Num
+        urlBuilder.append("&numOfRows=").append(URLEncoder.encode(String.valueOf(numOfRows), "UTF-8")); // 한페이지당 데이터 수
+        urlBuilder.append("&pageNo=").append(URLEncoder.encode(String.valueOf(pageNo)));  // 페이지 번호
         log.info("url확인: {}", urlBuilder);
         return urlBuilder.toString();
     }
 
-    // http 응답받아 문자열로 변환
-    // API에서 데이터를 가져오는 메소드
-    // 여기서 법정동 코드 일치 메서드 사용하기
+    // http 응답받아 문자열로 변환, API 호출 메소드
     public List<AccidentInfo> fetchDataFromApi() {
         try {
-            String urlStr = buildApi();
-            URL url = new URL(urlStr);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setRequestProperty("Content-Type", "application/json");
+            // 전체 데이터 개수 얻기
+            int totalCount = fetchTotalCount();
+            // 한 번에 요청할 데이터 수
+            int numOfRows = 100;
+            // 필요한 전체 API 호출 횟수 계산(페이지)
+            int totalCalls = (int) Math.ceil((double) totalCount / numOfRows);
+            log.info("totalCalls: {}", totalCalls);
 
-            int responseCode = connection.getResponseCode();
-            System.out.println("Response Code: " + responseCode);
+            List<AccidentInfo> resultList = new ArrayList<>();
 
-            if (responseCode == HttpURLConnection.HTTP_OK) {
-                BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                String inputLine;
-                StringBuilder response = new StringBuilder();
+            for (int pageNo = 1; pageNo <= totalCalls; pageNo++) {
+                String urlStr = buildApi(numOfRows, pageNo);
+                URL url = new URL(urlStr);
+                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+                connection.setRequestMethod("GET");
+                connection.setRequestProperty("Content-Type", "application/json");
 
-                while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
+                int responseCode = connection.getResponseCode();
+                System.out.println("Response Code: " + responseCode);
+
+                if (responseCode == HttpURLConnection.HTTP_OK) {
+                    BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                    String inputLine;
+                    StringBuilder response = new StringBuilder();
+
+                    while ((inputLine = in.readLine()) != null) {
+                        response.append(inputLine);
+                    }
+                    in.close();
+                    // JSON 파싱을 시도하고, 실패할 경우 JSONException을 잡아 처리
+                    try {
+                        List<AccidentInfo> parsedList = parsingDate(response.toString());
+                        resultList.addAll(parsedList);
+                    } catch (JSONException e) {
+                        log.error("JSON 파싱 중 오류 발생: {}", e.getMessage());
+                    }
+                } else {
+                    System.out.println("GET 요청에 실패했습니다.");
                 }
-                in.close();
-
-
-                // 응답 문자열 반환
-                log.info("법정동 코드 응답 확인: {}", ParsingDate(response.toString()).get(0).getBjDongCode());
-
-                return ParsingDate(response.toString());
-            } else {
-                System.out.println("GET 요청에 실패했습니다.");
             }
-        } catch (Exception e) {
-            e.printStackTrace();
+            return resultList;
+        } catch (IOException e) {
+            throw new RuntimeException("API 호출 중 오류 발생", e);
         }
-        return null;
     }
 
     // 자전거 사고다발지역 데이터 파싱
-    public List<AccidentInfo> ParsingDate(String jsonResponse) throws JSONException {
+    public List<AccidentInfo> parsingDate(String jsonResponse) throws JSONException {
         // JSON 응답 문자열 파싱
         JSONObject jsonObject = new JSONObject(jsonResponse);
         // 사고 정보 추출
@@ -91,35 +141,20 @@ public class ApiService {
             JSONObject item = items.getJSONObject(i);
 
             AccidentInfo accidentInfo = new AccidentInfo();
-            accidentInfo.setBjDongCode(item.getString("bjd_cd")); // 법정동 코드
-            accidentInfo.setSpotNm(item.getString("spot_nm")); // 사고가 발생한 시도 및 시군구 명칭
+            accidentInfo.setBjDongCode(item.getString("bjd_cd"));   // 법정동 코드
+            accidentInfo.setSpotNm(item.getString("spot_nm"));      // 사고가 발생한 시도 및 시군구 명칭
             accidentInfo.setOccrrncCnt(item.getInt("occrrnc_cnt")); // 발생 건수
-            accidentInfo.setCasltCnt(item.getInt("caslt_cnt")); // 사상자 수
-            accidentInfo.setDthDnvCnt(item.getInt("dth_dnv_cnt")); // 사망자 수
-            accidentInfo.setSeDnvCnt(item.getInt("se_dnv_cnt")); // 중상자 수
-            accidentInfo.setSlDnvCnt(item.getInt("sl_dnv_cnt")); // 경상자 수
-            accidentInfo.setGeomJson(item.getString("geom_json")); // 사고 지점 지리적 위치 데이터
-            accidentInfo.setLoCrd(item.getString("lo_crd")); // 경도(lnt)
-            accidentInfo.setLaCrd(item.getString("la_crd")); // 위도(lat)
+            accidentInfo.setCasltCnt(item.getInt("caslt_cnt"));     // 사상자 수
+            accidentInfo.setDthDnvCnt(item.getInt("dth_dnv_cnt"));  // 사망자 수
+            accidentInfo.setSeDnvCnt(item.getInt("se_dnv_cnt"));    // 중상자 수
+            accidentInfo.setSlDnvCnt(item.getInt("sl_dnv_cnt"));    // 경상자 수
+            accidentInfo.setGeomJson(item.getString("geom_json"));  // 사고 지점 지리적 위치 데이터
+            accidentInfo.setLoCrd(item.getString("lo_crd"));        // 경도(lnt)
+            accidentInfo.setLaCrd(item.getString("la_crd"));        // 위도(lat)
 
             accidentInfoList.add(accidentInfo);
         }
 
         return accidentInfoList;
-    }
-
-    // totalCount를 얻기 위한 API URL 생성
-    private String buildApiForTotalCount() throws UnsupportedEncodingException {
-        StringBuilder urlBuilder = new StringBuilder(BASE_URL);
-
-        // 기본 파라미터 설정
-        urlBuilder.append("?ServiceKey=").append(SERVICE_KEY);
-        urlBuilder.append("&searchYearCd=").append(URLEncoder.encode("2022", StandardCharsets.UTF_8));
-        urlBuilder.append("&siDo=");
-        urlBuilder.append("&guGun=");
-        urlBuilder.append("&type=").append(URLEncoder.encode("json", StandardCharsets.UTF_8));
-        urlBuilder.append("&numOfRows=1");  // totalCount 확인을 위해 numOfRows를 1로 설정
-
-        return urlBuilder.toString();
     }
 }
